--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 project(cuda CUDA)
 
-set(CMAKE_CUDA_STANDARD 14)
+set(CMAKE_CUDA_STANDARD 11)
 
-add_executable(cuda main.cu vec3.cuh ray.cuh)
+add_executable(cuda main.cu)
 
 set_target_properties(cuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
