Changes to makefile, remove schedule file in favor of srun

--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cuda CUDA)
 
 set(CMAKE_CUDA_STANDARD 11)
 
-add_executable(main.cu)
+add_executable(cuda main.cu)
 
 target_compile_options(cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 
