some minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 cpp/cmake-build-debug/out.ppm
 cuda/cmake-build-debug/out.ppm
 cuda/cmake-build-debug/out.ppm
+cuda/cmake-build-debug/out.ppm
+cuda/cmake-build-debug/profiler.out.ncu-rep
+cuda/cmake-build-debug/profiler-flat.out.ncu-rep
