--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(inOneWeekend ./inOneWeekend/main.cu)
 add_executable(inOneWeekendFloats ./inOneWeekendFloats/main.cu)
 add_executable(theNextWeekTree ./theNextWeek/tree/main.cu)
 
-target_compile_options(cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37 -lineinfo>)
+target_compile_options(cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(inOneWeekend PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(inOneWeekendFloats PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(theNextWeekTree PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
