not working, though hopefully progress improved kmeans

--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -7,12 +7,14 @@ add_executable(cuda main.cu)
 add_executable(inOneWeekend ./inOneWeekend/main.cu)
 add_executable(inOneWeekendFloats ./inOneWeekendFloats/main.cu)
 add_executable(theNextWeekTree ./theNextWeek/tree/main.cu)
+add_executable(kmeans ./kmeans/main.cu)
 
 set(CMAKE_CUDA_FLAGS "--use_fast_math -O3 -Xptxas -O3, -Xcompiler -O3")
 target_compile_options(cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(inOneWeekend PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(inOneWeekendFloats PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(theNextWeekTree PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
+target_compile_options(kmeans PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 
 set_target_properties(cuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
@@ -21,4 +23,6 @@ set_target_properties(inOneWeekend PROPERTIES
 set_target_properties(inOneWeekendFloats PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(theNextWeekTree PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(kmeans PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
