Add additional folder and build target for the smarter tree

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ cuda/cmake-build-debug/out.ppm
 cuda/cmake-build-debug/out.ppm
 cuda/cmake-build-debug/profiler.out.ncu-rep
 cuda/cmake-build-debug/profiler-flat.out.ncu-rep
+cuda/cmake-build-debug/theNextWeekSmarterTree
