--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ cuda/cmake-build-debug/out.ppm
 cuda/cmake-build-debug/profiler.out.ncu-rep
 cuda/cmake-build-debug/profiler-flat.out.ncu-rep
 cuda/cmake-build-debug/theNextWeekSmarterTree
+cuda/cmake-build-debug/theNextWeekRest
