--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(inOneWeekendFloats ./inOneWeekendFloats/main.cu)
 add_executable(theNextWeekTree ./theNextWeek/tree/main.cu)
 add_executable(theNextWeekRest ./theNextWeek/rest/main.cu)
 add_executable(theNextWeekSmarterTree ./theNextWeek/smarter-trees/main.cu)
+add_executable(theNextWeekTreeUnrolled ./theNextWeek/tree-unrolled/main.cu)
 
 set(CMAKE_CUDA_FLAGS "--use_fast_math -O3 -Xptxas -O3, -Xcompiler -O3")
 target_compile_options(cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
@@ -17,6 +18,7 @@ target_compile_options(inOneWeekendFloats PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-ge
 target_compile_options(theNextWeekTree PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(theNextWeekRest PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(theNextWeekSmarterTree PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
+target_compile_options(theNextWeekTreeUnrolled PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 
 set_target_properties(cuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
@@ -29,4 +31,6 @@ set_target_properties(theNextWeekTree PROPERTIES
 set_target_properties(theNextWeekRest PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(theNextWeekSmarterTree PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(theNextWeekTreeUnrolled PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
