separated finished code

--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(theNextWeekTree ./theNextWeek/tree/main.cu)
 add_executable(theNextWeekRest ./theNextWeek/rest/main.cu)
 add_executable(theNextWeekSmarterTree ./theNextWeek/smarter-trees/main.cu)
 add_executable(theNextWeekUnrolled ./theNextWeek/unrolled-supersampling/main.cu)
+add_executable(trace ./advancedTracer/main.cu)
 
 set(CMAKE_CUDA_FLAGS "--use_fast_math -O3 -Xptxas -O3, -Xcompiler -O3")
 target_compile_options(cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
@@ -19,6 +20,7 @@ target_compile_options(theNextWeekTree PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-genco
 target_compile_options(theNextWeekRest PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(theNextWeekSmarterTree PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 target_compile_options(theNextWeekUnrolled PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
+target_compile_options(trace PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_37,code=sm_37>)
 
 set_target_properties(cuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
@@ -33,4 +35,6 @@ set_target_properties(theNextWeekRest PROPERTIES
 set_target_properties(theNextWeekSmarterTree PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(theNextWeekUnrolled PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(trace PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
